# illli-tts

./: .gitignore  README.md  TASK.md  TODO.md  crontab.txt  download_model.sh  pyproject.toml  test_batch.txt
examples/: voice_cloning.md
src/: __init__.py  api.py  cli.py  config.py  edge_tts.py  edge_tts_engine.py  history.py  models.py  processor.py  sender.py  tts.py  voices.py  webui.py
